--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,7 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="grey">#808080</color>
+    <color name="red">#DA310D</color>
+    <color name="light_red">#F9F2F0</color>
+    <color name="light_green">#EDFAEA</color>
 </resources>
