--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -77,7 +77,8 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/appBarLayout"
-        app:layout_constraintBottom_toTopOf="@id/guideline2">
+        app:layout_constraintBottom_toTopOf="@id/guideline2"
+        android:backgroundTint="@color/lightest_green">
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/rvSpeakerHostMed"
